tein you win screen

--- a/Englanninkielen-oppimispeli/lisää/fill-in-the-blank.css
+++ b/Englanninkielen-oppimispeli/lisää/fill-in-the-blank.css
@@ -84,7 +84,9 @@ button:hover {
 button.hidden {
     display: none;
 }
-
+.hidden {
+    display: none;
+}
 /* Modal backdrop */
 .gameModal {
     position: fixed;
