siirsin sanapelin omaan kansioon ja poistin toisen puu.png joita oli kaksi

--- a/Englanninkielen-oppimispeli/sanapeli/sanapeli.css
+++ b/Englanninkielen-oppimispeli/sanapeli/sanapeli.css
@@ -1,6 +1,6 @@
   body {
       font-family: Georgia, serif;
-      background-image: url('puu.jpg');
+      background-image: url('../img/puu.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
