lisäsin kaikki pelit mainiin

--- a/Englanninkielen-oppimispeli/kuukausipeli/tyyli.css
+++ b/Englanninkielen-oppimispeli/kuukausipeli/tyyli.css
@@ -3,7 +3,7 @@ body {
   font-family: Arial, sans-serif;
   text-align: center;
   margin: 10px;
-  background-image: url('puu.jpg');
+  background-image: url('../img/puu.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
