pistin gridiks noi etusivun jutut

--- a/Englanninkielen-oppimispeli/etusivu/main.css
+++ b/Englanninkielen-oppimispeli/etusivu/main.css
@@ -219,7 +219,8 @@ body {
 .info {
   padding: 40px 20px;
   max-width: 1000px;
-  margin: 0 auto;
+  margin-left: 25%;
+  margin-right: 25%;
   text-align: center;
 }
 
