--- a/Englanninkielen-oppimispeli/etusivu/main.css
+++ b/Englanninkielen-oppimispeli/etusivu/main.css
@@ -220,8 +220,11 @@ body {
   padding: 40px 20px;
   max-width: 1000px;
   margin: 0 auto;
+  margin-left: 25%;
+  margin-right: 25%;
   text-align: center;
 }
+
 
 .info p {
   font-size: 18px;
